--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -95,11 +95,11 @@
               </td>
               <td style="padding: 0px; width: 70%; background-color: white;border: none;">
                   <div class="btn-group">
-                      <button type="button" class="btn btn-default btn-sm btn-chart"><i class="fa fa-fw fa-lg fa-table"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
-                      <button type="button" class="btn btn-default btn-sm btn-chart"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('table')"><i class="fa fa-fw fa-lg fa-table"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('bar')"><i class="fa fa-fw fa-lg fa-bar-chart-o"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('line')"><i class="fa fa-fw fa-lg fa-line-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('pie')"><i class="fa fa-fw fa-lg fa-pie-chart"></i></button>
+                      <button type="button" class="btn btn-default btn-sm btn-chart" onclick="drawChart('area')"><i class="fa fa-fw fa-lg fa-area-chart"></i></button>
                  </div>
               </td>
               <td style="padding: 0px; width: 5%; background-color: inherit; border: none;"><button type="button" class="btn btn-default btn-sm" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-close" style="color: black;"></i></button></td>
